Now that we finally got it working, set to Java 8